--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -52,15 +52,15 @@
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                 </padding>
                <children>
-                  <AnchorPane fx:id="mainTaskListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+                  <AnchorPane fx:id="taskListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
                </children>
             </VBox>
-            <VBox minWidth="340" prefWidth="340">
+            <VBox minWidth="340" prefWidth="340" maxWidth="400">
                 <padding>
 	               <Insets top="10" bottom="10" left="10" right="10"/>
 	            </padding>
 	            <children>
-		            <AnchorPane fx:id="taskListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+		            <AnchorPane fx:id="mainTaskListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
 		            <AnchorPane fx:id="browserPlaceholder" VBox.vgrow="ALWAYS" />
 	            </children>
             </VBox>
