--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -55,7 +55,7 @@
                   <AnchorPane fx:id="taskListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
                </children>
             </VBox>
-            <VBox minWidth="340" prefWidth="340" maxWidth="400">
+            <VBox minWidth="340" prefWidth="340">
                 <padding>
 	               <Insets top="10" bottom="10" left="10" right="10"/>
 	            </padding>
