--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -18,14 +18,24 @@
                   <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
                </items>
             </Menu>
+            <Menu mnemonicParsing="false" text="Commands">
+               <items>
+                  <MenuItem fx:id="commandNextMenuItem" mnemonicParsing="false" onAction="#handlePreviousCommandTextNext" text="Show Previous Command" />
+                  <MenuItem fx:id="commandPreviousMenuItem" mnemonicParsing="false" onAction="#handlePreviousCommandTextPrevious" text="Show Previous Command" />  
+               </items>
+            </Menu>
             <Menu mnemonicParsing="false" text="Navigate">
                <items>
-                  <MenuItem fx:id="commandNextMenuItem" mnemonicParsing="false" onAction="#handlePreviousCommandTextNext" text="Previous Command" />
-                  <MenuItem fx:id="commandPreviousMenuItem" mnemonicParsing="false" onAction="#handlePreviousCommandTextPrevious" text="Previous Command" />
-                  <MenuItem fx:id="listFirstMenuItem" mnemonicParsing="false" onAction="#handleListPanelScrollToFirst" text="Scroll to Top" />
-                  <MenuItem fx:id="listLastMenuItem" mnemonicParsing="false" onAction="#handleListPanelScrollToLast" text="Scroll to Bottom" />
-                  <MenuItem fx:id="listPreviousMenuItem" mnemonicParsing="false" onAction="#handleListPanelScrollUp" text="Scroll Up" />
-                  <MenuItem fx:id="listNextMenuItem" mnemonicParsing="false" onAction="#handleListPanelScrollDown" text="Scroll Down" />
+                  <MenuItem disable="true" mnemonicParsing="false" text="Filtered Tasklist" />
+                  <MenuItem fx:id="filteredListFirstMenuItem" mnemonicParsing="false" onAction="#handleFilteredListPanelScrollToFirst" text=" Scroll to Top" />
+                  <MenuItem fx:id="filteredListLastMenuItem" mnemonicParsing="false" onAction="#handleFilteredListPanelScrollToLast" text=" Scroll to Bottom" />
+                  <MenuItem fx:id="filteredListPreviousMenuItem" mnemonicParsing="false" onAction="#handleFilteredListPanelScrollUp" text=" Scroll Up" />
+                  <MenuItem fx:id="filteredListNextMenuItem" mnemonicParsing="false" onAction="#handleFilteredListPanelScrollDown" text=" Scroll Down" />
+                  <MenuItem disable="true" mnemonicParsing="false" text="Main Tasklist" />
+                  <MenuItem fx:id="mainListFirstMenuItem" mnemonicParsing="false" onAction="#handleMainListPanelScrollToFirst" text=" Scroll to Top" />
+                  <MenuItem fx:id="mainListLastMenuItem" mnemonicParsing="false" onAction="#handleMainListPanelScrollToLast" text=" Scroll to Bottom" />
+                  <MenuItem fx:id="mainListPreviousMenuItem" mnemonicParsing="false" onAction="#handleMainListPanelScrollUp" text=" Scroll Up" />
+                  <MenuItem fx:id="mainListNextMenuItem" mnemonicParsing="false" onAction="#handleMainListPanelScrollDown" text=" Scroll Down" />
                </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Help">
@@ -47,15 +57,15 @@
        </AnchorPane>
       <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.4" VBox.vgrow="ALWAYS">
          <items>
-            <VBox fx:id="taskList" minWidth="340" prefWidth="340">
+            <VBox fx:id="filteredTaskList" minWidth="340" prefWidth="340">
                 <padding>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                 </padding>
                <children>
-                  <AnchorPane fx:id="taskListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+                  <AnchorPane fx:id="filteredTaskListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
                </children>
             </VBox>
-            <VBox minWidth="340" prefWidth="340">
+            <VBox fx:id="mainTaskList" minWidth="340" prefWidth="340">
                 <padding>
 	               <Insets top="10" bottom="10" left="10" right="10"/>
 	            </padding>
