--- a/src/main/resources/view/TaskListCard.fxml
+++ b/src/main/resources/view/TaskListCard.fxml
@@ -20,7 +20,7 @@
                     <padding>
                         <Insets bottom="10" left="25" right="10" top="10" />
                     </padding>
-
+                    <!-- @@author A0140019W -->
                     <children>
                         <HBox spacing="5" alignment="CENTER_LEFT">
                             <children>
