--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -13,6 +13,7 @@
    <children>
       <MenuBar VBox.vgrow="NEVER">
          <menus>
+         <!-- @@author A0146840E -->
             <Menu mnemonicParsing="false" text="File">
                <items>
                   <MenuItem fx:id="mainMenuItem" mnemonicParsing="false" onAction="#handleFullScreen" text="FullScreen" />
@@ -45,6 +46,7 @@
 	                </items>
                   </Menu>
                </items>
+               <!-- @@author -->
             </Menu>
             <Menu mnemonicParsing="false" text="Help">
                <items>
@@ -65,6 +67,7 @@
        </AnchorPane>
       <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.4" VBox.vgrow="ALWAYS">
          <items>
+         <!-- @@author A0146840E -->
             <VBox fx:id="filteredTaskList" minWidth="340" prefWidth="340">
                 <padding>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
@@ -81,6 +84,7 @@
 		            <AnchorPane fx:id="mainTaskListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
 	            </children>
             </VBox>
+         <!-- @@author -->
          </items>
       </SplitPane>
       <AnchorPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
