--- a/src/main/resources/view/StatusBarFooter.fxml
+++ b/src/main/resources/view/StatusBarFooter.fxml
@@ -4,10 +4,16 @@
 <GridPane styleClass="grid-pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seedu.tasklist.ui.StatusBarFooter" stylesheets="@DarkTheme.css">
 <columnConstraints>
   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+  <!-- @@author A0140019W -->
+  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+  <!-- @@author -->
   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 </columnConstraints>
  <children>
       <AnchorPane styleClass="anchor-pane" id="syncStatusBarPane" fx:id="syncStatusBarPane" minWidth="0.0" />
-      <AnchorPane styleClass="anchor-pane" id="saveLocStatusBarPane" fx:id="saveLocStatusBarPane" minWidth="0.0" GridPane.columnIndex="1" />
+      <!-- @@author A0140019W -->
+      <StackPane styleClass="anchor-pane" id="progressBarPane" fx:id="progressBarPane" minWidth="0.0" GridPane.columnIndex="1" />
+      <!-- @@author -->
+      <AnchorPane styleClass="anchor-pane" id="saveLocStatusBarPane" fx:id="saveLocStatusBarPane" minWidth="0.0" GridPane.columnIndex="2" />
  </children>
 </GridPane>
